--- a/css/style.css
+++ b/css/style.css
@@ -225,25 +225,40 @@ Due to the translate3d some focus of the right menu a and Span tags were showing
 
 ::-webkit-scrollbar {
     -webkit-appearance:none;
-    width:12px;
-    _background-color:#df0040;
+    width:8px;
+    background: -webkit-linear-gradient(#BF0035, #D4003C, #df0040);
+    background: -moz-linear-gradient(#BF0035, #D4003C, #df0040);
+    background: -o-linear-gradient(#BF0035, #D4003C, #df0040);
+    background: linear-gradient(#BF0035, #D4003C, #df0040);
+    background-color:#df0040;
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius:12px;
+    border-radius:1px;
     border:4px solid rgba(255,255,255,0);
     background-clip:content-box;
-    _background-color:#df0040;
-    background-color: #df0040;
+    background: -webkit-linear-gradient(#BF0035, #D4003C, #df0040);
+    background: -moz-linear-gradient(#BF0035, #D4003C, #df0040);
+    background: -o-linear-gradient(#BF0035, #D4003C, #df0040);
+    background: linear-gradient(#BF0035, #D4003C, #df0040);
+    background-color:#df0040;
 }
 ::-webkit-scrollbar-thumb:hover {
     border-radius:12px;
     border:4px solid rgba(255,255,255,0);
     background-clip:content-box;
-    background-color:#df0040;
+    background: -webkit-linear-gradient(#df0040, #D4003C, #BF0035);
+    background: -moz-linear-gradient(#df0040, #D4003C, #BF0035);
+    background: -o-linear-gradient(#df0040, #D4003C, #BF0035);
+    background: linear-gradient(#df0040, #D4003C, #BF0035);
+    background-color:#BF0035;
 }
 
 ::-webkit-scrollbar-corner {
-    background-color:#df0040;
+    background: -webkit-linear-gradient(#df0040, #D4003C, #BF0035);
+    background: -moz-linear-gradient(#df0040, #D4003C, #BF0035);
+    background: -o-linear-gradient(#df0040, #D4003C, #BF0035);
+    background: linear-gradient(#df0040, #D4003C, #BF0035);
+    background-color:#BF0035;;
 }
 
