--- a/css/style.css
+++ b/css/style.css
@@ -226,31 +226,18 @@ Due to the translate3d some focus of the right menu a and Span tags were showing
 ::-webkit-scrollbar {
     -webkit-appearance:none;
     width:8px;
-    background: -webkit-linear-gradient(#BF0035, #D4003C, #df0040);
-    background: -moz-linear-gradient(#BF0035, #D4003C, #df0040);
-    background: -o-linear-gradient(#BF0035, #D4003C, #df0040);
-    background: linear-gradient(#BF0035, #D4003C, #df0040);
-    background-color:#df0040;
+    background-color:#f3f3f3;
 }
 
 ::-webkit-scrollbar-thumb {
     border-radius:1px;
     border:4px solid rgba(255,255,255,0);
     background-clip:content-box;
-    background: -webkit-linear-gradient(#BF0035, #D4003C, #df0040);
-    background: -moz-linear-gradient(#BF0035, #D4003C, #df0040);
-    background: -o-linear-gradient(#BF0035, #D4003C, #df0040);
-    background: linear-gradient(#BF0035, #D4003C, #df0040);
-    background-color:#df0040;
+    background-color:#D4003C;
 }
 ::-webkit-scrollbar-thumb:hover {
-    border-radius:12px;
-    border:4px solid rgba(255,255,255,0);
+    border:1px solid #c3c3c3;
     background-clip:content-box;
-    background: -webkit-linear-gradient(#df0040, #D4003C, #BF0035);
-    background: -moz-linear-gradient(#df0040, #D4003C, #BF0035);
-    background: -o-linear-gradient(#df0040, #D4003C, #BF0035);
-    background: linear-gradient(#df0040, #D4003C, #BF0035);
     background-color:#BF0035;
 }
 
@@ -259,6 +246,6 @@ Due to the translate3d some focus of the right menu a and Span tags were showing
     background: -moz-linear-gradient(#df0040, #D4003C, #BF0035);
     background: -o-linear-gradient(#df0040, #D4003C, #BF0035);
     background: linear-gradient(#df0040, #D4003C, #BF0035);
-    background-color:#BF0035;;
+    background-color:#BF0035;
 }
 
